tests/golden/compile-fail/enum_wrong_struct_form.rua
enum Message { Move { x: i64, y: i64 } }

fn message() -> Message {
    Message::Move(1, 2)
}
